Use live in-flight counts for ARS probe cap check